Baseline of customizations for user site.

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ theme: jekyll-theme-slate
 # Title of the GitHub pages user site.
 title: Shiny Objects
 
-description: My musings on cool tech.
+description: My investigations and musings on cool tech
 
 # Set the timezone.
 timezone: America/Denver
