Add first posts, changed site title and tweaked menu bar

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 theme: jekyll-theme-slate
 
 # Title of the GitHub pages user site.
-title: Shiny Objects
+title: Shiny Object Affliction
 
 description: My investigations and musings on cool tech
 
