set the site url in the config file

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@
 # Configuration variables
 #
 
+url: "https://shinyobjectaffliction.com/shinyobject"
+
 # Use the Slate theme for the base look-and-feel.
 theme: jekyll-theme-slate
 
